--- a/example/functions.yaml
+++ b/example/functions.yaml
@@ -2,13 +2,13 @@
 apiVersion: pkg.crossplane.io/v1beta1
 kind: Function
 metadata:
-  name: function-aws-resource-observer
+  name: function-aws-importer
   annotations:
     # This tells crossplane beta render to connect to the function locally.
     render.crossplane.io/runtime: Development
 spec:
   # This is ignored when using the Development runtime.
-  package: function-aws-resource-observer
+  package: function-aws-importer
 ---
 apiVersion: pkg.crossplane.io/v1beta1
 kind: Function
