feat: change external name tag to crossplane-external-name
So that it's more consistent with the other tags inserted by Crossplane.

Signed-off-by: Lucas Caparelli <lucas.caparelli@gympass.com>

--- a/example/composition.yaml
+++ b/example/composition.yaml
@@ -60,7 +60,7 @@ spec:
           toFieldPath: status.externalName
         - type: FromCompositeFieldPath
           fromFieldPath: status.externalName
-          toFieldPath: spec.forProvider.tags[crossplane.io/external-name]
+          toFieldPath: spec.forProvider.tags[crossplane-external-name]
 
   - step: ensure-ipv4-ingress-rules
     functionRef:
