docs: now we import all resources, say so and remove input from examples
Signed-off-by: Lucas Caparelli <lucas.caparelli@gympass.com>

--- a/example/composition.yaml
+++ b/example/composition.yaml
@@ -104,11 +104,9 @@ spec:
           ---
           [[- end ]]
           [[- end ]]
-  - step: import-sg-if-exists
+  - step: import-resources-if-exist
     functionRef:
       name: function-aws-importer
-    input:
-      resourceName: securityGroup
   - step: automatically-detect-ready-composed-resources
     functionRef:
       name: function-auto-ready
